--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,19 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-oauth/google": "^0.11.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
+    "autoprefixer": "^10.4.15",
     "framer-motion": "^10.16.0",
+    "leaflet": "^1.9.4",
+    "postcss": "^8.4.28",
     "react": "^18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.3.3",
-    "web-vitals": "^2.1.4",
-    "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.28"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
