--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
+    "swiper": "^12.0.2",
     "tailwindcss": "^3.3.3",
     "web-vitals": "^2.1.4"
   },
